# RealEstatePriceVisualizer

./: .cursorrules  .gitignore  LICENSE  TASK_LIST.md  claude.md  pyproject.toml
docs/: README.md
scripts/: boston_enhanced_heat_maps.py  boston_neighborhood_zones.py  generate_comprehensive_map.py  generate_university_visualization.py  minimal_university_vis.py  simple_university_test.py  test_university_data.py
src/real_estate_visualizer/: __init__.py  grid_visualizer.py  improved_heat_maps.py  university_data.py
